# 2_files_diff_generator

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml  python-app.yml
gendiff/: __init__.py  consts.py  diff_tree.py  flat_file.py  formatter.py  generate_diff.py  internal_diff.py  load_data.py  parse_files.py  parser.py  stylish.py  stylish__.py  tree.py  tree_gen.py
gendiff/formatters/: finish_format.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
gendiff/tests/: test_empty.py  test_generate_diff.py
gendiff/tests/fixtures/: test1.txt  test2.txt  testres.py  testres1.txt
tests/: test_generate_diff.py
tests/fixtures/: file1.yaml  file2.yaml  test21.json  test22.json  test4.txt
